# magma

./: BUGS.txt  CMake.src  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.gen  Makefile.internal  Makefile.src  Makefile.subdir  README  README-Windows  README-v2.txt  ReleaseNotes  make.check-acml  make.check-atlas  make.check-mkl  make.check-openblas  make.inc.acml  make.inc.atlas  make.inc.goto  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.mkl-ilp64  make.inc.mkl-shared  make.inc.openblas
blas_fix/: CMake  Makefile  Makefile.src  README.txt  clangb.f  clange.f  clangt.f  clanhb.f  clanhe.f  clanhp.f  clanhs.f  clanht.f  clansb.f  clansp.f  clansy.f  clantb.f  clantp.f  clantr.f  sdsdot.f  slamch.f  slangb.f  slange.f  slangt.f  slanhs.f  slansb.f  slansf.f  slansp.f  slanst.f  slansy.f  slantb.f  slantp.f  slantr.f
control/: CMake  Makefile  Makefile.src  abs.cpp  affinity.cpp  affinity.h  auxiliary.cpp  batched_kernel_param.h  bulge_auxiliary.cpp  common_magma.h  connection_mgpu.cpp  constants.cpp  cpanel_to_q.cpp  cprint.cpp  dpanel_to_q.cpp  dprint.cpp  get_batched_crossover.cpp  get_batched_gemm_decision.cpp  get_nb.cpp  ilaenv.cpp  ilaenv_f77.f  magma.F90  magma.f90  magma_bulge.cpp  magma_cauxiliary.cpp  magma_cbulge.cpp  magma_cf77.cpp  magma_cfortran.F90  magma_cnan_inf.cpp  magma_dauxiliary.cpp  magma_dbulge.cpp  magma_df77.cpp  magma_dfortran.F90  magma_dnan_inf.cpp  magma_dsf77.cpp  magma_dsfortran.F90  magma_f77.cpp  magma_internal.h  magma_param.F90  magma_param.f90  (+54 more)
docs/: Doxyfile  Makefile  contributors-guide.txt  documentation-sparse.txt  documentation.txt  doxygen-modules.h  groups.sh  magma_strip  summarize_errors.pl
docs/html/: _formulas.tex  annotated.html  annotated.js  annotated_dup.js  authors.html  classes.html  (+675 more)
example/: Makefile  README.txt  example.c  example_f.F90  example_sparse.c  example_v1.c  example_v2.c  zfill.c  zfill.h
exp/: Makefile  Makefile.gen  Makefile.internal
exp_magma_quark/: Makefile  README.txt  make.exp.inc
include/: Makefile.src  auxiliary.h  magma.h  magma_auxiliary.h  magma_batched.h  magma_bulge.h  magma_c.h  magma_cbatched.h  magma_cbulge.h  magma_cbulgeinc.h  magma_cgehrd_m.h  magma_clapack.h  magma_copy.h  magma_copy_q.h  magma_copy_v1.h  magma_cvbatched.h  magma_d.h  magma_dbatched.h  magma_dbulge.h  magma_dbulgeinc.h  magma_dgehrd_m.h  magma_dlapack.h  magma_ds.h  magma_dvbatched.h  magma_lapack.h  magma_mangling.h  magma_mangling_cmake.h  magma_operators.h  magma_s.h  magma_sbatched.h  magma_sbulge.h  magma_sbulgeinc.h  magma_sgehrd_m.h  magma_slapack.h  magma_svbatched.h  magma_types.h  magma_v2.h  magma_vbatched.h  magma_z.h  magma_zbatched.h  (+42 more)
interface_cuda/: CMake  Makefile  Makefile.src  alloc.cpp  blas_c.cpp  blas_c_v1.cpp  blas_c_v2.cpp  blas_d.cpp  blas_d_v1.cpp  blas_d_v2.cpp  blas_s.cpp  blas_s_v1.cpp  blas_s_v2.cpp  blas_z.cpp  blas_z_v1.cpp  blas_z_v2.cpp  copy_v1.cpp  copy_v2.cpp  cset_get.cpp  dset_get.cpp  error.cpp  error.h  interface.cpp  interface_v1.cpp  set_get.cpp  sset_get.cpp  zset_get.cpp
magmablas/: CMake  Makefile  Makefile.src  cauxiliary.cu  caxpycp.cu  cbcyclic.cpp  cbcyclic.cu  cgeadd.cu  cgeadd2.cu  cgeadd_batched.cu  cgemm_batched.cpp  cgemm_batched.cu  cgemm_batched_core.cu  cgemm_fermi.cu  cgemm_fermi_batched.cu  cgemm_fermi_batched_k32.cu  cgemm_fermi_kernels.h  cgemm_fermi_kernels_batched.h  cgemm_reduce.cu  cgemm_vbatched.cpp  cgemm_vbatched_core.cu  cgemv_batched.cu  cgemv_batched_core.cu  cgemv_conj.cu  cgemv_conjv.cu  cgemv_fermi.cu  cgemv_tesla.cu  cgemv_vbatched.cpp  cgemv_vbatched_core.cu  cgeqr2.cpp  cgeqr2.cu  cgeqr2_batched.cu  cgeqr2_kernels.cu  cgeqr2x_gpu-v4.cu  cgerbt.cu  cgerbt.h  cgerbt_func_batched.cu  cgerbt_kernels.cu  cgetf2.cu  cgetf2_kernels.cu  (+638 more)
make.inc-examples/: make.inc.acml  make.inc.atlas  make.inc.macos  make.inc.macos-debug  make.inc.macos-mkl  make.inc.macos-openmp  make.inc.mkl-gcc  make.inc.mkl-gcc-debug  make.inc.mkl-gcc-ilp64  make.inc.mkl-gcc-ilp64-debug  make.inc.mkl-icc  make.inc.mkl-icc-debug  make.inc.mkl-icc-ilp64  make.inc.mkl-icc-ilp64-debug  make.inc.openblas  make.inc.openblas-debug
results/: parse.py  plots.py  readme.txt  run  run_all.csh  run_amigos.csh  run_geev.csh  run_setup.csh  run_svd.csh  run_syev.csh  run_syev_2stage.csh  run_symv.csh  trunk.py  util.py  v150_cuda70_k40c.py  v160_cuda70_k40c.py  v161_cuda70_k40c.py  v162_cuda70_k40c.py  v170_cuda70_k40c.py  v200_cuda70_k40c.py
sparse/: Makefile.src
sparse-iter/: Makefile  Makefile.gen  Makefile.src  README.txt
src/: CMake  Makefile  Makefile.src  cblas_c.cpp  cblas_d.cpp  cblas_s.cpp  cblas_z.cpp  cbulge_applyQ.cpp  cbulge_applyQ_v2.cpp  cbulge_applyQ_v2_m.cpp  cbulge_aux.cpp  cbulge_back.cpp  cbulge_back_m.cpp  cbulge_kernel.cpp  cbulge_kernel_v2.cpp  cgebrd.cpp  cgeev.cpp  cgeev_m.cpp  cgegqr_gpu.cpp  cgehrd.cpp  cgehrd2.cpp  cgehrd_m.cpp  cgelqf.cpp  cgelqf_gpu.cpp  cgels.cpp  cgels3_gpu.cpp  cgels_gpu.cpp  cgeqlf.cpp  cgeqp3.cpp  cgeqp3_gpu.cpp  cgeqr2x_gpu-v2.cpp  cgeqr2x_gpu-v3.cpp  cgeqr2x_gpu.cpp  cgeqrf-v4.cpp  cgeqrf.cpp  cgeqrf2_gpu.cpp  cgeqrf3_gpu.cpp  cgeqrf_batched.cpp  cgeqrf_expert_batched.cpp  cgeqrf_gpu.cpp  (+747 more)
testing/: CMake  Makefile  Makefile.src  flops.h  magma_cgesvd_check.cpp  magma_cutil.cpp  magma_dgesvd_check.cpp  magma_dutil.cpp  magma_sgesvd_check.cpp  magma_sutil.cpp  magma_util.cpp  magma_zgesvd_check.cpp  magma_zutil.cpp  run_summarize.py  run_tests.py  testing_auxiliary.cpp  testing_blas_c.cpp  testing_blas_d.cpp  testing_blas_s.cpp  testing_blas_z.cpp  testing_c.h  testing_c_cublas_v2.cpp  testing_cblas.cpp  testing_cblas_c.cpp  testing_cblas_d.cpp  testing_cblas_s.cpp  testing_cblas_z.cpp  testing_cgeadd.cpp  testing_cgeadd_batched.cpp  testing_cgebrd.cpp  testing_cgeev.cpp  testing_cgeev_m.cpp  testing_cgegqr_gpu.cpp  testing_cgehrd.cpp  testing_cgehrd_m.cpp  testing_cgelqf.cpp  testing_cgelqf_gpu.cpp  testing_cgels.cpp  testing_cgels3_gpu.cpp  testing_cgels_gpu.cpp  (+539 more)
tools/: build.sh  checklist_run_tests.py  codegen.py  find_obj_files.sh  magmasubs.py
(+1972 files in other folders)
